--- a/src/Snappet.Web/app/pages/package/package.scss
+++ b/src/Snappet.Web/app/pages/package/package.scss
@@ -1,6 +1,6 @@
 ﻿.page.package {
     div.statistieken i.fa {
-        color: $cvd-red;
+        color: $snpt-red;
         font-size: 140pt;
         margin-right: 30px;
 
